fixed nav spacing

--- a/style.css
+++ b/style.css
@@ -2,7 +2,10 @@ nav a{
 color: #4a4646;
 font-weight: bold;
 font-size: 20px;
-
+padding: 0px;
+}
+p{
+    margin: 0px;
 }
 header a{
     color: #da1010;
